Added basic routes, layout and components

--- a/src/error.html
+++ b/src/error.html
@@ -4,9 +4,10 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/piquel-jar.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+        <h1>Something went terribly wrong. Whoopsie</h1>
+		<div style="display: contents">%sveltekit.status%</div>
+        <div>%sveltekit.error.message%</div>
 	</body>
 </html>
